# connies-story-video-generator

./: .dockerignore  .gitignore  BUGS_AND_TODOS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  config.yaml  config_elevenlabs.yaml  env.example  inspired-flow.txt  original-story.txt  pyproject.toml  test_story.txt  test_story_two_voices.txt  test_story_two_voices_openai.txt
docs/: creative-story-flow.md  design.md  session-progress.md  straight-adaptation-flow.md
docs/diagrams/: adapt-flow.puml  creative-flow.puml
docs/plans/: 2026-02-12-adaptation-flow-design.md  2026-02-12-adaptation-flow-implementation.md  2026-02-15-cli-design.md  2026-02-15-cli-implementation.md  2026-02-15-test-run-fixes-design.md  2026-02-15-test-run-fixes-implementation.md  2026-02-17-llm-tts-text-prep-design.md  2026-02-17-llm-tts-text-prep-implementation.md  2026-02-17-low-priority-fixes-implementation.md  2026-02-17-orchestrator-integration-test-design.md  2026-02-17-orchestrator-integration-test-implementation.md  2026-02-17-project-review-fixes-implementation.md  2026-02-18-inspired-by-design.md  2026-02-18-inspired-by-implementation.md  2026-02-18-original-mode-design.md  2026-02-25-web-ui-backend-implementation.md  2026-02-25-web-ui-design.md  (+1 more)
src/story_video/: cli.py  (+6 more)
tests/: conftest.py  error_factories.py  test_caption_generator.py  test_claude_client.py  test_cli.py  test_commands.py  test_config.py  test_cost.py  test_filters.py  test_image_generator.py  test_image_prompt_writer.py  test_image_timing.py  test_models.py  test_narration_prep.py  test_narration_tags.py  test_orchestrator.py  test_retry.py  test_state.py  test_story_writer.py  test_subtitles.py  test_text.py  test_tts_generator.py  test_video_assembler.py  test_visual_reference_writer.py  test_web_app.py  test_web_artifacts.py  test_web_integration.py  test_web_pipeline.py  test_web_pipeline_runner.py  test_web_progress.py  test_web_projects.py  test_web_serve_command.py  test_web_settings.py  test_web_sse.py  test_web_tts.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
(+86 files in other folders)
