[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "story-video"
version = "0.4.0"
description = "Generate narrated story videos for YouTube from a topic, inspiration, or existing text"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "elevenlabs>=1.0",
    "pydantic>=2.0",
    "typer[all]>=0.12.0",
    "pyyaml>=6.0",

    "tenacity>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.5.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
story-video = "story_video.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/story_video"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that make real API calls (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
